--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.lead {
-	color: white;
-	margin-top: 140px;
-	font-size: 18px;
-}
-
 .bio {
 	margin-bottom: -20px;
 	font-size: 28px;
@@ -12,8 +6,8 @@
 
 .foto {
 	width: 120px;
-	float: left;
-	margin-left: 150px;
+	float: right;
+	margin-right: 37%;
 	margin-bottom: 40px;
 }
 
@@ -41,12 +35,6 @@
 		margin-top: -120px;
 	}
 
-	.lead {
-		color: white;
-		margin-top: 388px;
-		font-size: 32px;
-	}
-
 	.bio {
 		padding-top: 60px;
 		padding-bottom: 60px;
@@ -55,7 +43,8 @@
 
 	.foto {
 		width: 200px;
-		margin-left: 100px;
+		float: right;
+		margin-right: 40%;
 	}
 
 	.baris1 {
