--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-.bio {
-	margin-bottom: -20px;
-	font-size: 28px;
-	padding-top: 10px;
+* {
+	font-family: 'monserrat;';
 }
 
 .foto {
 	width: 120px;
-	float: right;
-	margin-right: 37%;
+	float: left;
+	margin-left: 33%;
 	margin-bottom: 40px;
 }
 
@@ -19,7 +17,15 @@
 
 .teks {
 	color: white;
-	border: 1px;
+	margin-left: -18px;
+}
+
+.foto1 {
+	width: 380px;
+}
+
+.teks1 {
+	text-align: justify;
 }
 
 
@@ -29,26 +35,22 @@
 		margin-left: 140px;
 	}
 
+	.bio {
+		padding: 80px;
+	}
+
 	.carousel-item {
 		position: relative;
 		overflow: hidden;
 		margin-top: -120px;
 	}
 
-	.bio {
-		padding-top: 60px;
-		padding-bottom: 60px;
-		font-size: 52px;
-	}
-
 	.foto {
 		width: 200px;
-		float: right;
-		margin-right: 40%;
 	}
 
 	.baris1 {
-		margin-top: -100px;
+		margin-top: -90px;
 	}
 
 	.col-md-7 {
@@ -60,12 +62,25 @@
 		float: right;
 	}
 
-	.teks2 {
-		color: black;
-		border: 1px;
-	}
-
 	td {
 		font-size: 18px;
 	}
+
+	.teks {
+		margin-left: 0;
+	}
+
+	.foto1 {
+		float: right;
+		width: 550px;
+	}
+
+	.teks1 {
+		text-align: justify;
+	}
+
+	.baris1-1 {
+		align-content: center;
+	}	
+
 }
